fix: flex direction for alternating preview on small screens

--- a/assets/scss/_post-preview.scss
+++ b/assets/scss/_post-preview.scss
@@ -91,9 +91,13 @@
     }
 
     &:nth-child(2n+2) {
-        // Image on right.
         .post-preview-container {
+            // Image on right.
             flex-direction: row-reverse;
+
+            @include media-breakpoint-down(sm) {
+                flex-direction: column;
+            }
         }
 
         // Align content right.
